Fix left side being cut off on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body, html {
 
 body {
     height: 100vh;
+    min-width: 1000px;
     display: flex;
     align-items: center;
     justify-content: center;
